stable/rails/tests/golden/components/ingress.values.yaml
enabled: true
product: ingress-test
environment: production
version: 1.2.3

image:
  repository: matic/helm-charts:release-01-01-23-25

ingress:
  enabled: true
  list:
    - host: abc.example.com
      type: internal
      annotations:
        nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
        nginx.ingress.kubernetes.io/proxy-next-upstream: error timeout non_idempotent
        nginx.ingress.kubernetes.io/proxy-next-upstream-tries: 8
        nginx.ingress.kubernetes.io/proxy-body-size: 256m
        nginx.ingress.kubernetes.io/server-alias: "admin.example.com, admin-live.example.com, abc-live.example.com"
        external-dns.alpha.kubernetes.io/hostname: "admin.example.com, admin-live.example.com, abc.example.com"
        external-dns.alpha.kubernetes.io/ttl: "60"
      tls:
        enabled: true
        secret: example.com-tls

    - host: abc.someexample.com
      type: internal
      annotations:
        nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
        nginx.ingress.kubernetes.io/proxy-next-upstream: error timeout non_idempotent
        nginx.ingress.kubernetes.io/proxy-next-upstream-tries: 8
        nginx.ingress.kubernetes.io/proxy-body-size: 256m
        nginx.ingress.kubernetes.io/server-alias: "admin.someexample.com, broker.someexample.com"
        nginx.ingress.kubernetes.io/configuration-snippet: |
          rewrite ^/crm/static/css/main.(.+).chunk.css$ /crm/static/css/main.chunk.css break;
          rewrite ^/crm/static/css/2.(.+).chunk.css$ /crm/static/css/2.chunk.css break;
          opentracing_tag "service.name" "abc-nginx";
        external-dns.alpha.kubernetes.io/hostname: "admin.someexample.com, abc.someexample.com, broker.someexample.com"
        external-dns.alpha.kubernetes.io/ttl: "60"
        deny_locations:
          - /uploads/document
      tls:
        enabled: true
        secret: someexample.com-tls

    - host: abc.example.com
      type: external
      path: /api/abc120/notification_events
      annotations:
        nginx.ingress.kubernetes.io/proxy-next-upstream: error timeout non_idempotent
        nginx.ingress.kubernetes.io/proxy-next-upstream-tries: 8
        external-dns.alpha.kubernetes.io/hostname: abc.example.com
        external-dns.alpha.kubernetes.io/ttl: "60"
      tls:
        enabled: true
        secret: example.com-tls

    - host: broker-wss.example.com
      type: internal
      annotations:
        nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
        nginx.ingress.kubernetes.io/proxy-next-upstream: error timeout non_idempotent
        nginx.ingress.kubernetes.io/proxy-next-upstream-tries: 5
        nginx.ingress.kubernetes.io/proxy-body-size: 256m
        external-dns.alpha.kubernetes.io/hostname: "broker-wss.example.com"
        external-dns.alpha.kubernetes.io/ttl: "60"
      deny_locations:
        - /uploads/document
      tls:
        enabled: true
        secret: example.com-tls
      serviceName: abc-rails-websocket

webserver:
  enabled: true
