stable/rails/tests/golden/components/ingress.golden.yaml
---
# Source: rails/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test-rails-ingress-internal-0
  annotations:
    kubernetes.io/ingress.class: "internal"
    external-dns.alpha.kubernetes.io/hostname: "admin.example.com, admin-live.example.com, abc.example.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout non_idempotent"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "8"
    nginx.ingress.kubernetes.io/server-alias: "admin.example.com, admin-live.example.com, abc-live.example.com"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
  labels:
    app: ingress-test-rails-ingress
    app.kubernetes.io/name: ingress-test-rails
    app.kubernetes.io/instance: rails-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: release-01-01-23-25
    environment: production
    product: ingress-test
spec:
  rules:
    - host: abc.example.com
      http:
        paths:
          - backend:
              service:
                name: ingress-test-rails
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - abc.example.com
      secretName: example.com-tls
---
# Source: rails/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test-rails-ingress-internal-1
  annotations:
    kubernetes.io/ingress.class: "internal"
    deny_locations: "[/uploads/document]"
    external-dns.alpha.kubernetes.io/hostname: "admin.someexample.com, abc.someexample.com, broker.someexample.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/configuration-snippet: "rewrite ^/crm/static/css/main.(.+).chunk.css$ /crm/static/css/main.chunk.css break;\nrewrite ^/crm/static/css/2.(.+).chunk.css$ /crm/static/css/2.chunk.css break;\nopentracing_tag \"service.name\" \"abc-nginx\";\n"
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout non_idempotent"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "8"
    nginx.ingress.kubernetes.io/server-alias: "admin.someexample.com, broker.someexample.com"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
  labels:
    app: ingress-test-rails-ingress
    app.kubernetes.io/name: ingress-test-rails
    app.kubernetes.io/instance: rails-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: release-01-01-23-25
    environment: production
    product: ingress-test
spec:
  rules:
    - host: abc.someexample.com
      http:
        paths:
          - backend:
              service:
                name: ingress-test-rails
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - abc.someexample.com
      secretName: someexample.com-tls
---
# Source: rails/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test-rails-ingress-external-2
  annotations:
    kubernetes.io/ingress.class: "external"
    external-dns.alpha.kubernetes.io/hostname: "abc.example.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout non_idempotent"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "8"
  labels:
    app: ingress-test-rails-ingress
    app.kubernetes.io/name: ingress-test-rails
    app.kubernetes.io/instance: rails-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: release-01-01-23-25
    environment: production
    product: ingress-test
spec:
  rules:
    - host: abc.example.com
      http:
        paths:
          - backend:
              service:
                name: ingress-test-rails
                port:
                  number: 3000
            path: /api/abc120/notification_events
            pathType: Prefix
  tls:
    - hosts:
        - abc.example.com
      secretName: example.com-tls
---
# Source: rails/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test-rails-ingress-internal-3
  annotations:
    kubernetes.io/ingress.class: "internal"
    external-dns.alpha.kubernetes.io/hostname: "broker-wss.example.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout non_idempotent"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "5"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
    nginx.ingress.kubernetes.io/server-snippet: |
      location /uploads/document { deny all; }
  labels:
    app: ingress-test-rails-ingress
    app.kubernetes.io/name: ingress-test-rails
    app.kubernetes.io/instance: rails-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: release-01-01-23-25
    environment: production
    product: ingress-test
spec:
  rules:
    - host: broker-wss.example.com
      http:
        paths:
          - backend:
              service:
                name: abc-rails-websocket
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - broker-wss.example.com
      secretName: example.com-tls
