stable/rails/tests/golden/components/websocket.golden.yaml
---
# Source: rails/templates/deployment-websocket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-test-rails-websocket
  labels:
    app: webserver-test-rails-websocket
    app.kubernetes.io/name: webserver-test-rails
    app.kubernetes.io/instance: rails-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: release-01-01-23-25
    environment: production
    product: webserver-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webserver-test-rails-websocket
      app.kubernetes.io/name: webserver-test-rails
      app.kubernetes.io/instance: rails-test
      environment: production
      product: webserver-test
  minReadySeconds: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webserver-test-rails-websocket
        app.kubernetes.io/name: webserver-test-rails
        app.kubernetes.io/instance: rails-test
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: release-01-01-23-25
        environment: production
        product: webserver-test
      annotations:
        rollme: "123abc"
    spec:
      containers:
      - name: webserver-test-rails-websocket
        image: matic/helm-charts:release-01-01-23-25
        imagePullPolicy: IfNotPresent
        command: ["sh","-c","bundle exec puma -t 8:8"]
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 20
        ports:
        - containerPort: 9292
        env:
        - name: SENTRY_RELEASE
          value: "webserver-test-release-01-01-23-25"
        - name: PORT
          value: "9292"
        - name: TEST
          value: VALUE
        resources:
          limits:
            cpu: 300m
            memory: 700Mi
          requests:
            cpu: 100m
            memory: 200Mi
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 100
        runAsUser: 100
---
# Source: rails/templates/service-websocket.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-test-rails-websocket
  labels:
    app: webserver-test-rails-websocket
    app.kubernetes.io/name: webserver-test-rails-websocket
    app.kubernetes.io/instance: rails-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: release-01-01-23-25
    environment: production
    product: webserver-test
  annotations:
    {}
spec:
  type: ClusterIP
  ports:
  - port: 9292
    targetPort: 9292
    protocol: TCP
  selector:
    app: webserver-test-rails-websocket
    app.kubernetes.io/name: webserver-test-rails-websocket
    app.kubernetes.io/instance: rails-test
    environment: production
    product: webserver-test
